# bfall-kube-controller

./: Cargo.toml  README.md  example.yaml
.cargo/: config.toml
.github/workflows/: build-and-deploy.yml  linting.yml
kube/: controller.yaml  tailscale-ingress-controller.yaml
shared/: Cargo.toml
shared/src/: controller.rs  lib.rs
src/: main.rs
tailscale-ingress-controller/: Cargo.toml  Dockerfile  cargo.toml  example.yaml
tailscale-ingress-controller/src/: main.rs
