[package]
name = "bfall-kube-controller"
version = "0.1.0"
edition = "2024"

[dependencies]
kube = { version = "3.0.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.27.0", features = ["latest", "schemars"] }
schemars = { version = "1" }
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.149"
tracing = "0.1.44"
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
derive_more = { version = "2.1.1", features = ["from", "error", "display", "full"] }
futures = "0.3.31"
