[package]
name = "tailscale-ingress-controller"
version.workspace = true
edition.workspace = true

[dependencies]
kube.workspace = true
kube-leader-election.workspace = true
k8s-openapi.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
derive_more.workspace = true
futures.workspace = true
metrics.workspace = true
uuid.workspace = true

[build-dependencies]
built.workspace = true
